# CLD-Trans

./: .gitignore  AMD_COMPUTE_PROPOSAL.md  CODING_PLAN.md  LICENSE  Makefile  PAPER_PLAN.md  PROJECT_OVERVIEW.md  README.md  SERVER_RUNBOOK.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
analysis/: __init__.py  conduction_dynamics.py  identifiability.py  interpretability.py  motif_atlas.py  propagation_maps.py
configs/: base.yaml  chbmit.yaml  ptbxl.yaml  sleepedf.yaml  stage1_server.yaml  stage1_single_gpu.yaml
data/: __init__.py  base_loader.py  chbmit_loader.py  eegmmidb_loader.py  factory.py  mimic_ecg_loader.py  ptbxl_loader.py  sleepedf_loader.py  synthetic_ldsem.py  transforms.py  tuh_eeg_loader.py
engine/: callbacks.py  evaluator.py  trainer_stage1.py  trainer_stage2.py
losses/: __init__.py  ldsem_loss.py  regularizers.py  task_loss.py  vq_loss.py
models/: __init__.py  cld_transformer.py
modules/: __init__.py  flow_layers.py  fractional_delay.py  lag_inferencer.py  positional.py  vq_tokenizer.py
results/: neurips_baseline_manifest.md
scripts/: aggregate_neurips_results.py  aggregate_neurips_results.sh  download_datasets_aws.sh  eval_all.sh  eval_stage2_test.sh  eval_synthetic.sh  eval_zero_shot.sh  generate_baseline_manifest.sh  make_figures.sh  recover_stage2_checkpoints.sh  run_ablation_studies.sh  run_camera_ready_stage2.sh  run_external_baseline_native.py  run_external_baselines_core.sh  run_feature_baseline.py  run_feature_baselines_core.sh  run_from_stage2.sh  run_hparam_sweep.sh  run_inceptiontime_baseline.py  setup_env.sh  (+8 more)
(+9 files in other folders)
