[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cld-trans"
version = "0.1.0"
description = "Causal-Lagged Dynamic Transformer for physiological time series"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "hydra-core>=1.3",
    "mne>=1.7",
    "numpy>=1.24",
    "omegaconf>=2.3",
    "torch>=2.2",
    "torchdiffeq>=0.2.3",
    "tqdm>=4.66",
    "wfdb>=4.1",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.9",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]
analysis = [
    "matplotlib>=3.8",
    "pandas>=2.2",
    "scikit-learn>=1.4",
    "seaborn>=0.13",
]

[tool.setuptools]
packages = ["analysis", "data", "engine", "losses", "models", "modules"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
packages = ["analysis", "data", "engine", "losses", "models", "modules"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
